# Musescore3

./: CMakeLists.txt  LICENSE  Makefile  Makefile.mingw  Makefile.osx  README.md  msvc_build.bat
audio/: CMakeLists.txt
audio/drivers/: control.cpp  driver.cpp  driver.h  drivers.cmake  jackaudio.cpp  jackaudio.h  mididriver.cpp  pa.cpp  pm.cpp
audio/midi/: midifile.h  msynthesizer.cpp
audiofile/: CMakeLists.txt  audiofile.cpp  audiofile.h
effects/: CMakeLists.txt  effect.cpp  effect.h  effectgui.cpp  effectgui.h
effects/compressor/: compressor.h  compressorgui.cpp
effects/freeverb/: freeverb.h  freeverbgui.cpp
effects/noeffect/: noeffect.cpp  noeffect.h  noeffectgui.h
effects/zita1/: zita.cpp  zita.h  zitagui.cpp  zitagui.h
importexport/: CMakeLists.txt
importexport/bb/: bb.cpp  bb.h
importexport/bww/: importbww.cpp
importexport/capella/: capella.cpp  capxml.cpp
importexport/guitarpro/: importgtp-gp4.cpp  importgtp-gp5.cpp  importgtp-gp6.cpp  importgtp-gp7.cpp  importgtp.cpp  importptb.cpp
importexport/midiimport/: importmidi.cpp  importmidi_beat.cpp  importmidi_chord.cpp  importmidi_chordname.cpp  importmidi_clef.cpp  importmidi_drum.cpp  importmidi_fraction.cpp  importmidi_inner.cpp  importmidi_instrument.cpp  importmidi_key.cpp  importmidi_lrhand.cpp  importmidi_lyrics.cpp  importmidi_meter.cpp  importmidi_model.cpp  importmidi_operations.cpp  importmidi_operations.h  importmidi_quant.cpp  importmidi_simplify.cpp  importmidi_swing.cpp  importmidi_tempo.cpp  importmidi_tie.cpp  importmidi_tuplet.cpp  importmidi_tuplet_detect.cpp  importmidi_tuplet_filter.cpp  importmidi_tuplet_tonotes.cpp  importmidi_tuplet_voice.cpp  importmidi_voice.cpp
importexport/musedata/: musedata.cpp
importexport/musicxml/: exportxml.cpp  importmxml.cpp  importmxmllogger.cpp  importmxmllogger.h  importmxmlnoteduration.cpp  importmxmlnoteduration.h  importmxmlnotepitch.cpp  importmxmlnotepitch.h  importmxmlpass1.cpp  importmxmlpass2.cpp  importxml.cpp  importxmlfirstpass.cpp  importxmlfirstpass.h  musicxmlfonthandler.cpp  musicxmlsupport.cpp  musicxmlsupport.h
importexport/ove/: importove.cpp  ove.cpp  ove.h
mtest/: CMakeLists.txt  cmake.inc  comp.scm  decl.scm  gen.scm  gen.sh  ms-objects.scm  ms.scm  mscoreappresources.cpp  mtest-guile.cpp  mtest.cpp  mtest.scm  mtestgen.scm  mtestglobals.cpp  run-guile.sh  s7mtest.cpp  testgen.scm  testrun.scm  testutils.cpp  testutils.h  types-code.scm  types.scm
mtest/biab/: tst_biab.cpp
mtest/bww/io/: tst_bww_io.cpp
mtest/capella/io/: tst_capella_io.cpp
mtest/guitarpro/: tst_guitarpro.cpp
mtest/importmidi/: tst_importmidi.cpp
mtest/libmscore/: tst_breath.scm  tst_copypaste.scm  tst_cursor.scm  tst_element.scm  tst_hairpin.scm  tst_note.scm  tst_readwriteundoreset.scm
mtest/libmscore/album/: tst_album.cpp
mtest/libmscore/barline/: tst_barline.cpp
mtest/libmscore/beam/: tst_beam.cpp
mtest/libmscore/box/: tst_box.cpp
mtest/libmscore/chordsymbol/: tst_chordsymbol.cpp
mtest/libmscore/clef/: tst_clef.cpp
mtest/libmscore/clef_courtesy/: tst_clef_courtesy.cpp
mtest/libmscore/compat114/: tst_compat114.cpp
mtest/libmscore/compat206/: tst_compat206.cpp
mtest/libmscore/concertpitch/: tst_concertpitchbenchmark.cpp
mtest/libmscore/copypaste/: tst_copypaste.cpp
mtest/libmscore/copypastesymbollist/: tst_copypastesymbollist.cpp
mtest/libmscore/cursor/: tst_cursor.cpp
mtest/libmscore/durationtype/: tst_durationtype.cpp
mtest/libmscore/dynamic/: tst_dynamic.cpp
mtest/libmscore/earlymusic/: tst_earlymusic.cpp
mtest/libmscore/exchangevoices/: tst_exchangevoices.cpp
mtest/libmscore/implode_explode/: tst_implodeExplode.cpp
mtest/libmscore/instrumentchange/: tst_instrumentchange.cpp
mtest/libmscore/join/: tst_join.cpp
mtest/libmscore/keysig/: tst_keysig.cpp
mtest/libmscore/layout/: tst_benchmark.cpp
mtest/libmscore/layout_elements/: tst_layout_elements.cpp
mtest/libmscore/links/: tst_links.cpp
mtest/libmscore/measure/: tst_measure.cpp
mtest/libmscore/midi/: tst_midi.cpp
mtest/libmscore/midimapping/: tst_midimapping.cpp
mtest/libmscore/note/: tst_note.cpp
mtest/libmscore/parts/: tst_parts.cpp
mtest/libmscore/readwriteundoreset/: tst_readwriteundoreset.cpp
mtest/libmscore/remove/: tst_remove.cpp
mtest/scripting/: tst_scripting.cpp
mtest/stringutils/: tst_stringutils.cpp
mtest/testscript/: tst_runscripts.cpp
mux/: CMakeLists.txt  main.cpp  mux.cpp  mux.h  muxqueue.cpp  muxqueue.h  muxseq.cpp  muxseqlib.cpp  muxseqsig.cpp  muxtaskv.cpp  muxtaskv.h  queue.cpp  queue.h
muxaudio/: CMakeLists.txt  control.cpp  control.h  event.cpp  event.h  muxaudio.cpp  muxaudio.h
muxaudio/driver/: driver.cpp  driver.h  jackaudio.cpp  jackaudio.h  jackweakapi.cpp  mididriver.cpp  mididriver.h  pa.cpp  pa.h  pm.cpp  pm.h  pulseaudio.cpp
muxlib/: CMakeLists.txt  event.cpp  event.h  muxcommon.h  muxlib.cpp  muxlib.h  muxseq.h  muxseq_client.cpp  muxseq_client.h  muxseq_net.cpp  muxseq_net.h  muxseqlib.cpp  muxseqlib.h  muxseqsig.cpp  muxseqsig.h  muxseqtools.h  synthesizer.h
muxseq/: CMakeLists.txt  control.cpp  main.cpp  midi.cpp  msynthesizer.cpp  msynthesizer.h  mux.cpp  mux.h  muxseq.cpp  muxseq.h  muxseq_api.cpp  muxseq_api.h  muxseqclient.h  seq.cpp  seq.h
muxseq/fluid/: chan.cpp  conv.cpp  dsp.cpp  fluid.cpp  fluid.h  gen.cpp  mod.cpp  sfont.cpp  sfont3.cpp  voice.cpp
muxseq/zerberus/: channel.cpp  channel.h  filter.cpp  filter.h  instrument.cpp  instrument.h  sample.h  sfz.cpp  voice.cpp  voice.h  zerberus.cpp  zerberus.h  zone.cpp  zone.h
muxtools/: CMakeLists.txt  eventutils.cpp  eventutils.h  exportmp3.cpp  exportmp3.h  muxseqtools.cpp  muxseqtools.h  synthesizergui.cpp  synthesizergui.h
muxtools/exports/: exportmidi.cpp  exportmidi.h  exportmp3.cpp
muxtools/fluid/: fluidgui.cpp  fluidgui.h
muxtools/midi/: midifile.cpp  midifile.h  midiinstrument.cpp  midiinstrument.h
muxtools/zerberus/: zerberusgui.cpp  zerberusgui.h
omr/: CMakeLists.txt
s7/: CMakeLists.txt  guile.scm  lib.scm  plib.scm  psyntax-expanded.ss  psyntax-s7.scm  repl.c  s7.c  utils.c  utils.h
(+798 files in other folders)
